# thisispaperback.github.io

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: deploy.yml
content/css/: main.css
content/pages/: about.md  mailing_list.md
content/templates/: about.html  base.html  blog.html  mailing_list.html  post.html
src/: main.py
